--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -54,6 +54,12 @@
             </a>
           </li>
           <li>
+            <a class="nav-link" href="/admin/event-venues">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <p>Event Venues</p>
+            </a>
+          </li>
+          <li>
             <a class="nav-link" href="/admin/departments">
               <i class="fa fa-sitemap" aria-hidden="true"></i>
               <p>Departments</p>
