--- a/app/templates/public/session-registration.html
+++ b/app/templates/public/session-registration.html
@@ -37,9 +37,11 @@
                                 <div class="info-wrap w-100 p-5">
                                     <h3 class="mb-2">SCIENCE WEEK</h3>
                                     <div class="dbox w-100 d-flex align-items-start">
-                                        <h5 class="mb-3">18th September - 23rd September 2023</h5>
+                                        <h5 class="mb-n3">18th September - 23rd September 2023</h5>
                                     </div>
-
+                                    <div class="dbox w-100 d-flex align-items-start">
+                                        <h5 class="mb-3">2.00 PM - 5.00 PM</h5>
+                                    </div>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="text pl-4">
                                             <p><span>Scientific Restoration of Mangrove in South East Asia</span> 
