--- a/app/templates/admin/session.html
+++ b/app/templates/admin/session.html
@@ -38,6 +38,13 @@
                         </div>
                     </div>
                     <br>
+                    <div class="text-center">
+                        <h4 class="card-title">Description</h4>
+                        <p class="card-body">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a elit sit amet mi tincidunt eleifend. Donec quis rhoncus lorem, sit amet aliquet nunc. Maecenas sagittis lacinia faucibus. Vivamus tortor lectus, interdum eu sagittis vel, gravida sed diam. Maecenas commodo accumsan est, vel aliquet augue ultrices eget. Quisque ac pretium elit. Vestibulum dapibus non ante nec bibendum. Ut quis ante non leo dapibus cursus viverra eu diam. Duis maximus nulla sed ante tincidunt sodales. Donec at nisi gravida, cursus dui fringilla, egestas ligula. Maecenas facilisis, nisi quis maximus tempus, neque augue imperdiet nisi, feugiat consectetur ante nulla gravida massa. Nulla ut sollicitudin ante.
+                        </p>
+                    </div>
+                    <br>
                     <div class="row">
                         <div class="col-8">
                             <p class="mt-2 card-title">Session Activity</p>
