--- a/app/templates/admin/departments.html
+++ b/app/templates/admin/departments.html
@@ -63,12 +63,11 @@
                 <div class="card strpied-tabled-with-hover">
                     <div class="card-header ">
                         <h4 class="card-title">All Departments</h4>
-                        <p class="card-category">CIFOR-ICRAF</p>
+                        <p class="card-category">Departments Count: {{ departments_count }}</p>
                     </div>
                     <div class="card-body table-full-width table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
-                                <th>#</th>
                                 <th>Name</th>
                                 <th>Registered Staff</th>
                                 <th>Date Registered</th>
@@ -78,7 +77,6 @@
                             <tbody>
                                 {% for department in departments %}
                                 <tr>
-                                    <td>{{ department.id }}</td>
                                     <td>{{ department.department }}</td>
                                     <td>{{ department.participants_count }}</td>
                                     <td>{{ department.created_at.strftime("%b %d %Y") }}</td>
