--- a/app/templates/admin/event-venues.html
+++ b/app/templates/admin/event-venues.html
@@ -63,12 +63,11 @@
                 <div class="card strpied-tabled-with-hover">
                     <div class="card-header ">
                         <h4 class="card-title">All Event Venues</h4>
-                        <p class="card-category">CIFOR-ICRAF</p>
+                        <p class="card-category">Event Venues Count: {{ event_venues_count }}</p>
                     </div>
                     <div class="card-body table-full-width table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
-                                <th>#</th>
                                 <th>Name</th>
                                 <th>Registered Sessions</th>
                                 <th>Date Registered</th>
@@ -78,7 +77,6 @@
                             <tbody>
                                 {% for venue in event_venues %}
                                 <tr>
-                                    <td>{{ venue.id }}</td>
                                     <td>{{ venue.venue }}</td>
                                     <td>{{ venue.session_count }}</td>
                                     <td>{{ venue.created_at.strftime("%b %d %Y") }}</td>
