--- a/app/templates/admin/event.html
+++ b/app/templates/admin/event.html
@@ -19,14 +19,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
+            <div class="col-md-12 ml-auto mr-auto">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-7">
                         <a class="btn btn-link btn-simple active" href="/admin/events" style="text-decoration: none;">
                             <i class="fa fa-chevron-circle-left" aria-hidden="true"></i>&ensp;Back
                         </a>
                     </div>
-                    <div class="col-7">
+                    <div class="col-5">
                         <a class="btn btn-success btn-fill btn-round btn-wd active ml-5" data-toggle="modal"
                             data-target="#addSessionModal">
                             <i class="fa fa-plus" aria-hidden="true"></i>&ensp;Add Session
@@ -84,95 +84,43 @@
                 <div class="card">
                     <div class="header text-center">
                         <h4 class="title">Science Week</h4>
-                        <p class="category"># weed-34b3-23bj-2w3b</p>
+                        <p class="category"># {{ event_uuid }}</p>
                         <p class="category">23rd September 2023 - 4th October 2023</p>
-                        <p class="category">11 Sessions</p>
+                        <p class="category">Sessions Count: {{ sessions_count }}</p>
                         <br>
                     </div>
                     <div class="content table-responsive">
                         <table class="table">
                             <thead>
-                                <th class="text-center" width="20%">#</th>
-                                <th class="text-center" width="20%">Session</th>
-                                <th class="text-center" width="20%">Date Time</th>
+                                <th class="text-center" width="25%">Session</th>
+                                <th class="text-center" width="17%">Start Date Time</th>
+                                <th class="text-center" width="17%">End Date Time</th>
                                 <th class="text-center" width="20%">Venue</th>
                                 <th class="text-center" width="5%">Active</th>
                                 </th width="15%">
                                 </th>
                             </thead>
                             <tbody>
+                                {% for session in sessions %}
                                 <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>Components</td>
-                                    <td>16</td>
-                                    <td>115+</td>
-                                    <td><i class="fa fa-check text-success"></td>
+                                    <td>{{ session.session }}</td>
+                                    <td>{{ session.start_timestamp.strftime("%d/%m/%Y %H:%M:%S") }}</td>
+                                    <td>{{ session.end_timestamp.strftime("%d/%m/%Y %H:%M:%S") }}</td>
+                                    <td>{{ session.venue }}</td>
+                                    <td>
+                                        {% if session.db_status == "active" %}
+                                        <i class="fa fa-check text-success">
+                                        {% elif session.db_status == "inactive" %}
+                                        <i class="fa fa-times text-danger"></i>
+                                        {% endif %}
+                                    </td>
                                     <td>
                                         <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
                                             <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
                                         </a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>Global Restoration of Landscapes in South East Asia</td>
-                                    <td>20/09/2023 14:04:23</td>
-                                    <td>Main Conference Hall</td>
-                                    <td><i class="fa fa-check text-success"></td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>Example Pages</td>
-                                    <td>4</td>
-                                    <td>22+</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>Documentation</td>
-                                    <td>4</td>
-                                    <td>22+</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>SASS Files</td>
-                                    <td>4</td>
-                                    <td>22+</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>weed-34b3-23bj-2w3b</td>
-                                    <td>Login/Register/Lock Pages</td>
-                                    <td>4</td>
-                                    <td>22+</td>
-                                    <td><i class="fa fa-times text-danger"></i></td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
-                                </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
 
