--- a/app/templates/admin/registered_staff.html
+++ b/app/templates/admin/registered_staff.html
@@ -23,12 +23,11 @@
                 <div class="card strpied-tabled-with-hover">
                     <div class="card-header ">
                         <h4 class="card-title">All Registered Staff</h4>
-                        <p class="card-category">CIFOR-ICRAF</p>
+                        <p class="card-category">Registered Staff Count: {{ participants_count }}</p>
                     </div>
                     <div class="card-body table-full-width table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
-                                <th>#</th>
                                 <th>Name</th>
                                 <th>Email Address</th>
                                 <th>Department</th>
@@ -36,29 +35,19 @@
                                 <th></th>
                             </thead>
                             <tbody>
+                                {% for participant in participants %}
                                 <tr>
-                                    <td>1</td>
-                                    <td>Samuel Mariwa</td>
-                                    <td>s.mariwa@cifor-icraf.org</td>
-                                    <td>ICT</td>
-                                    <td>3</td>
+                                    <td>{{ participant.first_name+' '+participant.last_name }}</td>
+                                    <td>{{ participant.email_address }}</td>
+                                    <td>{{ participant.department }}</td>
+                                    <td>{{ participant.sessions_count }}</td>
                                     <td>
-                                        <a class="btn btn-info btn-fill btn-round active" href="/admin/staff/3">
+                                        <a class="btn btn-info btn-fill btn-round active" href="/admin/staff/{{ participant.id }}">
                                             <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
                                         </a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Rosemary Kande</td>
-                                    <td>r.kande@cifor-icraf.org</td>
-                                    <td>Finance</td>
-                                    <td>11</td>
-                                    <td>
-                                        <a class="btn btn-info btn-fill active btn-round">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
-                                        </a>
-                                    </td>
+                                {% endfor %}
                                 </tr>
                             </tbody>
                         </table>
