UI population with DB data

--- a/app/templates/admin/admin_templates/base_admin_template.html
+++ b/app/templates/admin/admin_templates/base_admin_template.html
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" href="/admin/registered_staff">
+            <a class="nav-link" href="/admin/registered-staff">
               <i class="fa fa-users" aria-hidden="true"></i>
               <p>Registered Staff</p>
             </a>
