--- a/app/templates/admin/event.html
+++ b/app/templates/admin/event.html
@@ -115,7 +115,7 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/3">
+                                        <a class="btn btn-info btn-fill active btn-round" href="/admin/session/{{ session.session_uuid }}">
                                             <i class="fa fa-eye" aria-hidden="true"></i>&ensp;View Details
                                         </a>
                                     </td>
