--- a/app/templates/admin/session.html
+++ b/app/templates/admin/session.html
@@ -20,20 +20,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
-                <a class="btn btn-link btn-simple active" href="/admin/event/3" style="text-decoration: none;">
+            <div class="col-md-9 ml-auto mr-auto">
+                <a class="btn btn-link btn-simple active" href="/admin/event/{{ event_uuid.event_uuid }}" style="text-decoration: none;">
                     <i class="fa fa-chevron-circle-left" aria-hidden="true"></i>&ensp;Back
                 </a>
                 <div class="card card-plain table-plain-bg">
                     <div class="card-header">
                         <div class="row">
-                            <div class="col-7">
-                                <h4 class="card-title">Biodiversity in Trees</h4>
-                                <h5 class="card-title"># yu2-u3bd-w23h</h5>
+                            <div class="col-8">
+                                <h4 class="card-title">{{ session_details.session }}</h4>
+                                <h5 class="card-title"># {{ session_details.session_uuid }}</h5>
                             </div>
-                            <div class="col-5">
-                                <h4 class="card-title">Main Conference Hall</h4>
-                                <h5 class="card-title">14th September 2023 14:00 Hrs</h5>
+                            <div class="col-4">
+                                <h4 class="card-title">{{ session_details.venue }}</h4>
+                                <h5 class="card-title">{{ session_details.start_timestamp.strftime("%B %d, %Y %H:%M:%S") }}</h5>
                             </div>
                         </div>
                     </div>
@@ -41,22 +41,28 @@
                     <div class="text-center">
                         <h4 class="card-title">Description</h4>
                         <p class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a elit sit amet mi tincidunt eleifend. Donec quis rhoncus lorem, sit amet aliquet nunc. Maecenas sagittis lacinia faucibus. Vivamus tortor lectus, interdum eu sagittis vel, gravida sed diam. Maecenas commodo accumsan est, vel aliquet augue ultrices eget. Quisque ac pretium elit. Vestibulum dapibus non ante nec bibendum. Ut quis ante non leo dapibus cursus viverra eu diam. Duis maximus nulla sed ante tincidunt sodales. Donec at nisi gravida, cursus dui fringilla, egestas ligula. Maecenas facilisis, nisi quis maximus tempus, neque augue imperdiet nisi, feugiat consectetur ante nulla gravida massa. Nulla ut sollicitudin ante.
+                            {{ session_details.session_description }}
                         </p>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-8">
                             <p class="mt-2 card-title">Session Activity</p>
+                            {% if session_details.db_status == "inactive" %}
                             <label class="switch">
                                 <input type="checkbox" name="session_activity">
                                 <span class="slider round"></span>
                             </label>
-                              
+                            {% elif session_details.db_status == "active" %}
+                            <label class="switch">
+                                <input type="checkbox" name="session_activity" checked>
+                                <span class="slider round"></span>
+                            </label>
+                            {% endif %}
                         </div>
                         <div class="col-4">
-                            <a class="btn btn-md btn-danger btn-fill btn-round active deleteSession mt-4 ml-2" id="12"
-                                data_id="12">
+                            <a class="btn btn-md btn-danger btn-fill btn-round active deleteSession mt-4 ml-2" id="{{ session_details.id }}"
+                                data_id="{{ session_details.id }}">
                                 <i class="fa fa-trash" aria-hidden="true"></i>&ensp;Delete Session
                             </a>
                         </div>
@@ -68,7 +74,7 @@
                 </div>
                 <br>
                 <div class="text-center">
-                    <h4 class="card-title">Direct Link: <span style="font-size: 80%;"><a href="http://127.0.0.1:8000/session-registration/ure4d-347hf-4gf83-4gg3w" class="text-danger">https://cifor-icraf-events/session-registration/ure4d-347hf-4gf83-4gg3w</a></span></h4>
+                    <h4 class="card-title">Direct Link: <span style="font-size: 80%;"><a href="http://127.0.0.1:8000/session-registration/{{ session_details.session_uuid }}" class="text-danger">https://cifor-icraf-events/session-registration/{{ session_details.session_uuid }}</a></span></h4>
             </div>
                 <!--QR Code stuff-->
             </div>
@@ -79,46 +85,25 @@
                 <div class="card strpied-tabled-with-hover">
                     <div class="card-header ">
                         <h4 class="card-title">Attendees</h4>
-                        <p class="card-category">Attendee Count: 11</p>
+                        <p class="card-category">Attendee Count: {{ participants_count }}</p>
                     </div>
                     <div class="card-body table-full-width table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
-                                <th>#</th>
                                 <th>Name</th>
                                 <th>Email Address</th>
                                 <th>Department</th>
                                 <th>Registration Timestamp</th>
                             </thead>
                             <tbody>
+                                {% for participant in participants %}
                                 <tr>
-                                    <td>1</td>
-                                    <td>Samuel Mariwa</td>
-                                    <td>s.mariwa@cifor-icraf.org</td>
-                                    <td>ICT</td>
-                                    <td>20/09/2023 14:04:23</td>
+                                    <td>{{participant.first_name+' '+participant.last_name}}</td>
+                                    <td>{{ participant.email_address }}</td>
+                                    <td>{{ participant.department}}</td>
+                                    <td>{{ participant.created_at.strftime("%d/%m/%Y %H:%M:%S") }}</td>
                                 </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Caroline Mwangi</td>
-                                    <td>c.mwangi@cifor-icraf.org</td>
-                                    <td>Finance</td>
-                                    <td>20/09/2023 14:04:23</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Wilfred Njuguna</td>
-                                    <td>w.njuguna@cifor-icraf.org</td>
-                                    <td>Human Resources</td>
-                                    <td>20/09/2023 14:04:23</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Samuel Gachigi</td>
-                                    <td>s.gachigi@cifor-icraf.org</td>
-                                    <td>Soils</td>
-                                    <td>20/09/2023 14:04:23</td>
-                                </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
