--- a/app/templates/public/session-registration.html
+++ b/app/templates/public/session-registration.html
@@ -35,17 +35,17 @@
                         <div class="row no-gutters justify-content-between">
                             <div class="col-lg-6 d-flex align-items-stretch">
                                 <div class="info-wrap w-100 p-5">
-                                    <h3 class="mb-2">SCIENCE WEEK</h3>
+                                    <h3 class="mb-2">{{ session_details.event }}</h3>
                                     <div class="dbox w-100 d-flex align-items-start">
-                                        <h5 class="mb-n3">18th September - 23rd September 2023</h5>
+                                        <h5 class="mb-n3">{{ session_details.start_timestamp.strftime("%B %d, %Y") }}</h5>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
-                                        <h5 class="mb-3">2.00 PM - 5.00 PM</h5>
+                                        <h5 class="mb-3">{{ session_details.start_timestamp.strftime("%I:%M %p") }} - {{ session_details.end_timestamp.strftime("%I:%M %p") }}</h5>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="text pl-4">
-                                            <p><span>Scientific Restoration of Mangrove in South East Asia</span> 
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                            <p><span>{{ session_details.session }}</span> 
+                                                {{ session_details.session_description }}</p>
                                         </div>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
