Create function implementation

--- a/app/templates/admin/departments.html
+++ b/app/templates/admin/departments.html
@@ -37,7 +37,7 @@
                     <div class="modal-body text-center">
                         <p>Add Department</p>
                     </div>
-                    <form method="POST" id="form_add_admin">
+                    <form method="POST" id="form_add_department">
                         <div class="modal-body">
                             {{ add_department_form.hidden_tag() }}
                             <div class="row">
