--- a/app/templates/admin/event-venues.html
+++ b/app/templates/admin/event-venues.html
@@ -37,7 +37,7 @@
                     <div class="modal-body text-center">
                         <p>Add Event Venue</p>
                     </div>
-                    <form method="POST" id="form_add_admin">
+                    <form method="POST" id="form_add_event_venue">
                         <div class="modal-body">
                             {{ add_venue_form.hidden_tag() }}
                             <div class="row">
