--- a/app/templates/admin/events.html
+++ b/app/templates/admin/events.html
@@ -37,7 +37,7 @@
                                     <div class="modal-body text-center">
                                         <p>Add Event</p>
                                     </div>
-                                    <form method="POST" id="form_add_admin">
+                                    <form method="POST" id="form_add_event">
                                         <div class="modal-body">
                                             {{ add_event_form.hidden_tag() }}
                                             <div class="row">
