--- a/app/templates/public/public_templates/base_public_template.html
+++ b/app/templates/public/public_templates/base_public_template.html
@@ -23,6 +23,7 @@
 <script src="{{ url_for('static', filename='js/public_js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/public_js/jquery.validate.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/public_js/main.js') }}"></script>
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 </body>
 
 </html>
