--- a/app/templates/public/session-registration-success.html
+++ b/app/templates/public/session-registration-success.html
@@ -37,8 +37,8 @@
                                           <br><br>
                                           <h2 class="heading-section">CIFOR-ICRAF EVENTS</h2>
                                           <br><br>
-                                          <h3 class="mb-2 reg-success-text">SCIENCE WEEK</h3>
-                                          <h5 class="mb-2 reg-success-text"><i class="fa fa-check-circle-o" aria-hidden="true"></i>&ensp;You have successfully registered for the session: Scientific Restoration of Mangrove in South East Asia</h5>
+                                          <h3 class="mb-2 reg-success-text">{{ session_details.event }}</h3>
+                                          <h5 class="mb-2 reg-success-text"><i class="fa fa-check-circle-o" aria-hidden="true"></i>&ensp;You have successfully registered for the session: {{ session_details.session }}</h5>
                                        </div>
                                     </div>
                                  </div>
